--- a/src/Forms/components/Admin/admin.css
+++ b/src/Forms/components/Admin/admin.css
@@ -6,8 +6,7 @@
     padding: 5px;
     margin: 3px;
     margin-left: 8%;
-    transition: color 0.2s ease, background-color 0.2s ease, transform 0.3s ease;
-    
+    transition: color 0.2s ease, background-color 0.2s ease, transform 0.3s ease; 
 }
 
 .AdminHeader {
@@ -15,7 +14,6 @@
     justify-content: space-between;
 
 }
-
 
 .PaHeadTop {
     display: flex;
@@ -38,9 +36,8 @@
   .input_style input[type="file"] {
     display: none;
   }
-#outlined-basic{
-    color:var(--para-clr);
-    background-color:var(--text);
-    border-color: black;
-    
-}
+
+  #chapterForm .MuiDialog-paperWidthSm{
+    width: 40% !important;
+    max-width: 40% !important;
+  }
