--- a/src/Forms/style/courses.css
+++ b/src/Forms/style/courses.css
@@ -84,10 +84,10 @@ a {
 
 .courseBox {
     height: auto;
-    width: 100%;
+    width: 95%;
     display: flex;
     flex-wrap: wrap;
-    background-color: var(--bg-clr);
+    background-color:var(--bg-clr);
     justify-content: space-evenly;
     margin-top: 1.5rem;
     
@@ -116,34 +116,43 @@ a {
     padding: 19px;
 
 } */
-
+.filt{
+    position: fixed;
+    top: 3.2rem;
+          
+    right: 4%;
+    cursor: pointer;
+}
 .courseImg {
-    height: 180px;
-    width: 100%;
+    height: 120px;
+    width: 85%;
     /* margin-left: 30px; */
-    margin-top: 20px;
+    margin-top: 1px;
     box-shadow: #f7f9fa;
     margin-bottom: 20px;
+    margin-left: 15px;
     background-size: cover;
 
 }
+
 
 .cTop {
     font-size: 20px;
     font-family: 'Anton', sans-serif;
     justify-content: center;
     align-items: center;
-    padding: 17px;
-    margin-left: -15px;
+    
+    margin-left: 0.3em;
+    
     color: var(--main-heading);
 }
 
-.filterlist {
+/* .filterlist {
     margin-left: 2rem;
     margin-top: 1rem;
 
     cursor: pointer;
-}
+} */
 
 /* 
 .courseBox {
@@ -156,32 +165,32 @@ a {
 
 .Cbox {
 
-    height: 450px;
-    width: 350px;
+    height: 330px;
+    width: 290px;
     background-color: var(--form);
     color: black;
-    font-size: 17px;
+    font-size: 16px;
     font-family: Arial, Helvetica, sans-serif;
-    margin: 10px;
+    margin: 18px;
     border-radius: 8px;
     border-color: whitesmoke;
     box-shadow: rgb(180, 177, 177);
     border-style: solid;
     justify-content: center;
     align-items: center;
-    padding: 19px;
+    padding: 20px;
     /* position: relative; 
     transition: filter 3s ease; */
 
 }
 
 .Cbox:hover {
-    transform: scale(1.05);
+    transform: scale(1.02);
 }
 
 .subscribe-btn {
-    width: 80%;
-    height: 2em;
+    width: 49%;
+    height: 1.5em;
     background-color: #111b20;
     display: flex;
     justify-content: center;
@@ -189,9 +198,9 @@ a {
     transition: 0.5s;
     cursor: pointer;
     color: white;
-    border-radius: 4px;
-    padding: 19px;
-    margin-left: 35px;
+    border-radius: 6px;
+    padding: 16px;
+    margin-left: 61px;
     margin-top: 30PX;
 }
 
@@ -229,4 +238,17 @@ a {
     top: 5.2rem !important;
     z-index: 0;
     height: 90vh;
+    background-color: var(--form) !important;
+}
+@media (max-width: 630px)
+{
+  .filt{
+    right:9%;
+  }
+}
+@media (min-width: 631px) and (max-width: 1024px) {
+   .filt{
+    right:8%;
+   }
+
 }
