--- a/src/Forms/style/dashboard.css
+++ b/src/Forms/style/dashboard.css
@@ -1,47 +1,4 @@
-/* * {
-    margin: 0;
-    box-sizing: border-box;
-}
 
-.jumbotron {
-    font-size: 20px;
-    font-style: italic;
-    font-family: Arial, Helvetica, sans-serif;
-    display: flex;
-    justify-content: left;
-    align-items: center;
-    margin-top: 15px;
-    height: 200px;
-    margin-left: 140px;
-    margin-top: 30px;
-    margin-bottom: 30px;
-}
-
-.base {
-    font-size: 20px;
-    font-style: italic;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.bgimage {
-    width: 1250px;
-    height: 400px;
-    justify-content: center;
-    align-items: center;
-    margin-left: 140px;
-    /* margin-top: 10px; */
-
-
-/* .navbar-toggler{
-    width: 100%;
-    height: 53px;
-    background-color: white;
-    
-}
-navbar-toggler:focus{
-    background-color: rgb(235, 243, 243);
-    
-} */
 
 .jumbotron {
     font-size: 20px;
@@ -66,11 +23,7 @@ a {
     text-decoration: none;
 }
 
-/* .footer{
-    background-color: black;
-    height: 85px;
-    color: white;
-} */
+
 .fimg {
     height: 59px;
     width: 65px;
@@ -114,7 +67,7 @@ a {
 }
 
 .grid {
-    /* margin-top: 50px; */
+  
     height: 450px;
     width: 100%;
     background-color: var(--form);
@@ -185,3 +138,33 @@ a {
     margin: 0 auto;
     width: 96%;
 }
+
+.start-learning-button {
+    background: none; 
+    color: #007BFF; 
+    padding: 0; 
+    border: none; 
+    cursor: pointer;
+    text-decoration: underline; 
+    font-size: 16px;
+    margin-bottom: 20px; 
+    margin-left: 90rem;
+    font-size: large;
+  }
+  
+  .start-learning-button:hover {
+    color: #0056b3; 
+  }
+
+  .head{
+    margin-left:10rem;
+  }
+  
+  
+  
+  
+  
+  
+  
+  
+  
